force-app/main/default/objects/Event__c/fields/Accommodation_budget__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_budget__c</fullName>
    <label>Accommodation Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>