force-app/main/default/objects/Event__c/fields/Allocated_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Tickets__c</fullName>
    <inlineHelpText>The number of Event Product Tickets allocated further to Event Registrations</inlineHelpText>
    <label>Total Quantity Allocated</label>
    <summarizedField>Event_Product__c.Quantity_Allocated__c</summarizedField>
    <summaryForeignKey>Event_Product__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>