force-app/main/default/objects/Event__c/fields/Allow_Duplicate_Event_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicate_Event_Registrations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the user to allow Duplicate Event Registration for this Event</description>
    <inlineHelpText>Allow the user to allow Duplicate Event Registration for this Event</inlineHelpText>
    <label>Allow Duplicate Event Registrations</label>
    <type>Checkbox</type>
</CustomField>