force-app/main/default/objects/Event__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <label>Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Approval Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>