force-app/main/default/objects/Event__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <description>The number of registered individuals that attended the event</description>
    <label>Attending / Cheked In</label>
    <summaryFilterItems>
        <field>Event_Registration__c.Event_Registration_Status__c</field>
        <operation>equals</operation>
        <value>Attended / Checked In</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>