force-app/main/default/objects/Event__c/fields/Attended_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Attended_Survey_URL__c</fullName>
    <description>The survey URL for those that attended the event</description>
    <label>Attended Survey URL</label>
    <type>Url</type>
</CustomField>