force-app/main/default/objects/Event__c/fields/Attending_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Attending_Checked_Out__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attending / Checked Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>