force-app/main/default/objects/Event__c/fields/Available_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Available_Tickets__c</fullName>
    <inlineHelpText>The number of Event Product Tickets still available for allocation. NOTE - This may not be the case if Maximum Registrations are less than total tickets</inlineHelpText>
    <label>Total Quantity Remaining</label>
    <summarizedField>Event_Product__c.Quantity_Remaining__c</summarizedField>
    <summaryForeignKey>Event_Product__c.Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>