force-app/main/default/objects/Event__c/fields/Budget_Printing__c.field-meta.xml
<CustomField>
    <fullName>Budget_Printing__c</fullName>
    <inlineHelpText>Items include invitations, name badges, program booklets, event signage and banners.</inlineHelpText>
    <label>Printing and Postage Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>