force-app/main/default/objects/Event__c/fields/Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Budget_Total__c</fullName>
    <formula>Budget_Site_Rental__c + Budget_Catering__c + Budget_Transportation__c + Budget_Decor__c +  Budget_Printing__c + Budget_Activities__c + Budget_Other__c + Budget_Contingency__c +  Travel_and_Subsistence_Staff_Budget__c +  Accommodation_budget__c +  Student_Ambassador_Budget__c +  External_Speakers_Budget__c  +  Resources_and_Materials_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total projected expenses</inlineHelpText>
    <label>Total Budget (Expected Gross Cost)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>