force-app/main/default/objects/Event__c/fields/Business_Area__c.field-meta.xml
<CustomField>
    <fullName>Business_Area__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>Executive Degrees</fullName>
            </value>
            <value>
                <fullName>Executive Diplomas</fullName>
            </value>
            <value>
                <fullName>On-Campus Open Programmes</fullName>
            </value>
            <value>
                <fullName>Open Online Programmes</fullName>
            </value>
            <value>
                <fullName>Custom Programmes</fullName>
            </value>
            <value>
                <fullName>Student Marketing</fullName>
            </value>
            <value>
                <fullName>Student Services</fullName>
            </value>
            <value>
                <fullName>Alumni &amp; Advancement</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications</fullName>
                <isActive>false</isActive>
                <label>Marketing &amp; Communications</label>
            </value>
            <value>
                <fullName>Marketing (RAO)</fullName>
                <isActive>false</isActive>
                <label>Marketing (RAO)</label>
            </value>
            <value>
                <fullName>Marketing (Student Recruitment)</fullName>
                <isActive>false</isActive>
                <label>Marketing (Student Recruitment)</label>
            </value>
            <value>
                <fullName>R&amp;I / B2B</fullName>
                <isActive>false</isActive>
                <label>R&amp;I / B2B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>