force-app/main/default/objects/Event__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>