force-app/main/default/objects/Event__c/fields/Capacity_Full__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Full__c</fullName>
    <formula>( Invited__c  +  Attended__c  +  Attending_Checked_Out__c  +  Declined__c  +  Did_Not_Attend__c  + Registered_Attendees__c) /  Maximum_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Full</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>