force-app/main/default/objects/Event__c/fields/Capacity_Notification__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Notification__c</fullName>
    <inlineHelpText>Enter a % at which a notification email will be sent to the below User</inlineHelpText>
    <label>Capacity Notification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>