force-app/main/default/objects/Event__c/fields/CM_ER_Auto_Sync__c.field-meta.xml
<CustomField>
    <fullName>CM_ER_Auto_Sync__c</fullName>
    <description>Should Sync Campaign Member and Event Registration</description>
    <inlineHelpText>Should Sync Campaign Member and Event Registration</inlineHelpText>
    <label>CM / ER Auto Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>