force-app/main/default/objects/Event__c/fields/CM_ER_Record_Difference__c.field-meta.xml
<CustomField>
    <fullName>CM_ER_Record_Difference__c</fullName>
    <formula>IF( No_Campaign_Members__c  -  No_Event_Registrations_ex_Guest__c  &gt;= 0, 
     No_Campaign_Members__c  -  No_Event_Registrations_ex_Guest__c, 
     IF( No_Event_Registrations_ex_Guest__c  -  No_Campaign_Members__c  &gt;= 0, 
         No_Event_Registrations_ex_Guest__c  -  No_Campaign_Members__c, 0 
     ) 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM / ER Record Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>