force-app/main/default/objects/Event__c/fields/CM_ER_Variance__c.field-meta.xml
<CustomField>
    <fullName>CM_ER_Variance__c</fullName>
    <formula>IF( No_Campaign_Members__c  -  No_Event_Registrations_ex_Guest__c  = 0, &apos;No Variance &apos;, &apos;Variance&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM / ER Variance</label>
    <type>Text</type>
</CustomField>