force-app/main/default/objects/Event__c/fields/Consent_Required_to_Register__c.field-meta.xml
<CustomField>
    <fullName>Consent_Required_to_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Required to Register</label>
    <type>Checkbox</type>
</CustomField>