force-app/main/default/objects/Event__c/fields/Cost_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_Code__c</fullName>
    <inlineHelpText>This field should be set by admin while setup Event for Event Payment Web Service.</inlineHelpText>
    <label>Cost Center Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>