force-app/main/default/objects/Event__c/fields/Cost_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Event__c</fullName>
    <description>The overall cost of the event</description>
    <inlineHelpText>The overall cost of the event</inlineHelpText>
    <label>Cost of Event</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>