force-app/main/default/objects/Event__c/fields/Declined__c.field-meta.xml
<CustomField>
    <fullName>Declined__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Declined</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>