force-app/main/default/objects/Event__c/fields/Did_Not_Attend__c.field-meta.xml
<CustomField>
    <fullName>Did_Not_Attend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Did Not Attend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>