force-app/main/default/objects/Event__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to relate a particular discount code for this event</description>
    <inlineHelpText>Please choose the appropriate discount code for this event</inlineHelpText>
    <label>Discount Code</label>
    <referenceTo>Discount_Code__c</referenceTo>
    <relationshipLabel>Discount Code Utilisation (Events)</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>