force-app/main/default/objects/Event__c/fields/Discount_Code_In_Force__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code_In_Force__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to identify whether the discount code for this event is In Force based on discount Valid From &amp; Valid To from Discount Code record</description>
    <inlineHelpText>This is an automated field which is selected further to the status of the associated Discount Code field</inlineHelpText>
    <label>Discount Code In Force</label>
    <type>Checkbox</type>
</CustomField>