force-app/main/default/objects/Event__c/fields/Discover_your_Future_guides_distributed__c.field-meta.xml
<CustomField>
    <fullName>Discover_your_Future_guides_distributed__c</fullName>
    <label>Discover your Future guides distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>