force-app/main/default/objects/Event__c/fields/Display_Order_Address_Fields__c.field-meta.xml
<CustomField>
    <fullName>Display_Order_Address_Fields__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to display address fields during event registration</description>
    <inlineHelpText>Check this field if address fields need to be displayed during web registration</inlineHelpText>
    <label>Display Order Address Fields</label>
    <type>Checkbox</type>
</CustomField>