force-app/main/default/objects/Event__c/fields/Enable_Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>Enable_Waiting_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Waiting List</label>
    <type>Checkbox</type>
</CustomField>