force-app/main/default/objects/Event__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;12:00:00.000&quot;)</defaultValue>
    <description>The time the event is due to finish</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>