force-app/main/default/objects/Event__c/fields/Event_Audience__c.field-meta.xml
<CustomField>
    <fullName>Event_Audience__c</fullName>
    <label>Event Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate Students</fullName>
            </value>
            <value>
                <fullName>Postgraduate Students</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>