force-app/main/default/objects/Event__c/fields/Event_Capacity_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Capacity_Notification_Email__c</fullName>
    <description>This is controlling the event capacity notification email process</description>
    <inlineHelpText>Please select &apos;On&apos; for event capacity notification email receive</inlineHelpText>
    <label>Event Capacity Notification Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>