force-app/main/default/objects/Event__c/fields/Event_Complete__c.field-meta.xml
<CustomField>
    <fullName>Event_Complete__c</fullName>
    <description>Identifies if the Event is in the future</description>
    <formula>TODAY() &gt; Event_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Complete</label>
    <type>Checkbox</type>
</CustomField>