force-app/main/default/objects/Event__c/fields/Event_Description__c.field-meta.xml
<CustomField>
    <fullName>Event_Description__c</fullName>
    <inlineHelpText>255 characters are allowed on this field.</inlineHelpText>
    <label>Event Description</label>
    <type>TextArea</type>
</CustomField>