force-app/main/default/objects/Event__c/fields/Event_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Event_Evaluation__c</fullName>
    <description>Enter Event Evaluation Score post-Event (1-5, with 5 as the highest). Average of Session Rating.</description>
    <label>Event Evaluation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>