force-app/main/default/objects/Event__c/fields/Event_Focus__c.field-meta.xml
<CustomField>
    <fullName>Event_Focus__c</fullName>
    <description>The focus for the RAO event</description>
    <label>Event Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Faculty Outreach</fullName>
            </value>
            <value>
                <fullName>Faculty Recruitment</fullName>
            </value>
            <value>
                <fullName>Outreach</fullName>
            </value>
            <value>
                <fullName>Recruitment</fullName>
            </value>
            <value>
                <fullName>Student Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>