force-app/main/default/objects/Event__c/fields/Event_Logistics__c.field-meta.xml
<CustomField>
    <fullName>Event_Logistics__c</fullName>
    <label>Event Logistics</label>
    <type>TextArea</type>
</CustomField>