force-app/main/default/objects/Event__c/fields/Event_Manager_Refund_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Refund_Notification_Email__c</fullName>
    <description>This is controlling the event manager refund notification email process</description>
    <inlineHelpText>Please select &apos;On&apos; for event manager refund notification email receive</inlineHelpText>
    <label>Event Manager Refund Notification Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>