force-app/main/default/objects/Event__c/fields/Event_Publishing__c.field-meta.xml
<CustomField>
    <fullName>Event_Publishing__c</fullName>
    <inlineHelpText>In the majority of cases the selection will be ‘Event Website &amp; Registration Page’. Even though the Event Listing Website is not being used by the LED, events can still be shown further to the Event Group URL.</inlineHelpText>
    <label>Event Publishing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Registration Page Only</fullName>
            </value>
            <value>
                <fullName>No Event Registration Page</fullName>
            </value>
            <value>
                <fullName>Event Website &amp; Registration Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>