force-app/main/default/objects/Event__c/fields/Event_Publishing_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Publishing_Date_Time__c</fullName>
    <inlineHelpText>This field should not be completed &amp; is redundant currently as the LED are using Sitecore for Event Listings</inlineHelpText>
    <label>Event Publishing Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>