force-app/main/default/objects/Event__c/fields/Event_Reg_New_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Reg_New_Status__c</fullName>
    <description>Please enter the Campaign Member Status (on the related Campaign) that you would like to map this Event Registration Status to. Please note that the text used must be identical</description>
    <inlineHelpText>Please enter the Campaign Member Status (on the related Campaign) that you would like to map this Event Registration Status to. Please note that the text used must be identical</inlineHelpText>
    <label>Event Reg &apos;New&apos; Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>