force-app/main/default/objects/Event__c/fields/Event_Registration_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Confirmation_Email__c</fullName>
    <description>This is controlling the event registration confirmation email process</description>
    <inlineHelpText>Please select &apos;On&apos; for event registration confirmation email receive</inlineHelpText>
    <label>Event Registration Confirmation Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Email_Settings</valueSetName>
    </valueSet>
</CustomField>