force-app/main/default/objects/Event__c/fields/Event_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_URL__c</fullName>
    <description>The Full Event Registration URL for this Event</description>
    <inlineHelpText>The Full Event Registration URL for this Event</inlineHelpText>
    <label>Event Registration URL</label>
    <type>Url</type>
</CustomField>