force-app/main/default/objects/Event__c/fields/Event_Registrations_Available__c.field-meta.xml
<CustomField>
    <fullName>Event_Registrations_Available__c</fullName>
    <formula>MAX(0,  Available_Tickets__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Registrations Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>