force-app/main/default/objects/Event__c/fields/Event_Schedule_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Schedule_URL__c</fullName>
    <description>This is the URL for an AED Event Schedule</description>
    <label>Event Schedule URL</label>
    <type>Url</type>
</CustomField>