force-app/main/default/objects/Event__c/fields/Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date__c</fullName>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>